update: test move validation on human data

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4  0000000100\\n1111111100\\n0100000000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +284,7 @@
     "\n",
     "    \n",
     "# Define a function to check continuity using DFS. Do not execute the search if the total number of 1s is not 10.\n",
-    "# It takes in the 10x10 grid and the coordinates of a starting point on the shape.\n",
-    "# If the count = 10, the function will return True, indicating that the move is valid.\n",
+    "# If the DFS count = 10, the function will return True, indicating that the move is valid.\n",
     "def is_contiguous(shape):\n",
     "    rows = len(shape)\n",
     "    cols = len(shape[0])\n",
@@ -367,12 +366,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integration of the above functions to check if a move is valid.\n"
+    "### Integration of the above functions to check if a move is valid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -392,17 +391,52 @@
     "\n",
     "# Example usage:\n",
     "shape = [\n",
-    "    [0, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-    "    [0, 1, 0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "    [0, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
     "\n",
     "next_shape = [\n",
-    "    [1, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+    "    [0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
     "\n",
     "print(is_valid_move(shape, next_shape)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the function on the first 10 rows of the dataframe\n",
+    "# Since this data is from humans playing the game, we expect all moves to be valid.\n",
+    "\n",
+    "for idx, row in df.iterrows():\n",
+    "    if idx > 10:\n",
+    "        break\n",
+    "    shape = decode_shape_binaries_str(row['shape'])\n",
+    "    next_shape = decode_shape_binaries_str(row['next_shape'])\n",
+    "    print(is_valid_move(shape, next_shape))"
    ]
   },
   {
