--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -248,13 +248,21 @@
       "0000000100\n",
       "1111111100\n",
       "0100000000\n",
+      "=======================\n",
+      "0000000100\n",
+      "1111111100\n",
+      "0100000000\n",
+      "----------------------\n",
+      "1000001000\n",
+      "1111111000\n",
+      "1000000000\n",
       "=======================\n"
      ]
     }
    ],
    "source": [
     "for idx, row in df.iterrows():\n",
-    "    if idx > 3:\n",
+    "    if idx > 4:\n",
     "        break\n",
     "    shape = decode_shape_binaries_str(row['shape'])\n",
     "    shape_matrix = \"\\n\".join([\"\".join(map(str, line)) for line in shape]) \n",
@@ -319,14 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
@@ -334,12 +342,33 @@
     "# Define a function to check that there is exactly one change between the previous shape and the new shape.\n",
     "\n",
     "def is_one_change(shape, next_shape):\n",
-    "    if len(shape) != len(next_shape): # Make the shapes have the same number of rows so you can compare them directly\n",
-    "        # For the shape with the fewer rows, add empty rows at the end\n",
-    "        if len(shape) < len(next_shape):\n",
-    "            shape += [[0] * len(shape[0]) for _ in range(len(next_shape) - len(shape))]\n",
+    "    rows_shape = len(shape)\n",
+    "    rows_next_shape = len(next_shape)\n",
+    "    cols = len(shape[0])\n",
+    "    \n",
+    "    # Find the row with the greatest overlap in the number of 1s\n",
+    "    max_overlap = 0\n",
+    "    best_offset = 0\n",
+    "    for offset in range(-rows_shape + 1, rows_next_shape):\n",
+    "        overlap = 0\n",
+    "        for r in range(rows_shape):\n",
+    "            if 0 <= r + offset < rows_next_shape:\n",
+    "                overlap += sum(1 for c in range(cols) if shape[r][c] == 1 and next_shape[r + offset][c] == 1)\n",
+    "        if overlap > max_overlap:\n",
+    "            max_overlap = overlap\n",
+    "            best_offset = offset\n",
+    "    \n",
+    "    # Add a row of 0s to the shape with fewer rows\n",
+    "    if rows_shape < rows_next_shape:\n",
+    "        if best_offset > 0:\n",
+    "            shape = [[0] * cols] * best_offset + shape\n",
     "        else:\n",
-    "            next_shape += [[0] * len(next_shape[0]) for _ in range(len(shape) - len(next_shape))]\n",
+    "            shape = shape + [[0] * cols] * (-best_offset)\n",
+    "    elif rows_shape > rows_next_shape:\n",
+    "        if best_offset > 0:\n",
+    "            next_shape = [[0] * cols] * best_offset + next_shape\n",
+    "        else:\n",
+    "            next_shape = next_shape + [[0] * cols] * (-best_offset)\n",
     "\n",
     "    change_count = 0\n",
     "    for r in range(len(shape)):\n",
@@ -351,13 +380,12 @@
     "\n",
     "# Example usage:\n",
     "shape = [\n",
-    "    [0, 1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
-    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [1, 1, 1, 1, 1, 1, 0, 0, 0, 0],\n",
     "]\n",
     "next_shape = [     \n",
-    "    [0, 1, 1, 1, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-    "    [0, 1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+    "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
     "print(is_one_change(shape, next_shape)) "
    ]
@@ -371,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "False\n",
-      "False\n",
+      "True\n",
       "False\n",
       "True\n",
       "False\n",
@@ -436,7 +464,9 @@
     "        break\n",
     "    shape = decode_shape_binaries_str(row['shape'])\n",
     "    next_shape = decode_shape_binaries_str(row['next_shape'])\n",
-    "    print(is_valid_move(shape, next_shape))"
+    "    print(is_valid_move(shape, next_shape))\n",
+    "\n",
+    "# TODO: Address issue with left-justification. Rows 2 and 4 are valid moves, but the function returns False."
    ]
   },
   {
