iterated through rows to check move_validation

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "      <th>0</th>\n",
        "      <td>1023</td>\n",
        "      <td>16.038</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>1023</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
@@ -69,7 +69,7 @@
        "      <th>1</th>\n",
        "      <td>1023</td>\n",
        "      <td>17.168</td>\n",
-       "      <td>29.650000000000002</td>\n",
+       "      <td>29.65</td>\n",
        "      <td>2 1022</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]</td>\n",
@@ -79,7 +79,7 @@
        "      <th>2</th>\n",
        "      <td>2 1022</td>\n",
        "      <td>76.165</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>4 1020 512</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [1, 1, 1, 1, ...</td>\n",
@@ -89,7 +89,7 @@
        "      <th>3</th>\n",
        "      <td>4 1020 512</td>\n",
        "      <td>79.600</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>4 1020 256</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...</td>\n",
@@ -99,7 +99,7 @@
        "      <th>4</th>\n",
        "      <td>4 1020 256</td>\n",
        "      <td>81.315</td>\n",
-       "      <td></td>\n",
+       "      <td>NaN</td>\n",
        "      <td>520 1016 512</td>\n",
        "      <td>20120513_091629.txt</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0], [1, 1, 1, 1, ...</td>\n",
@@ -110,12 +110,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        shape  timestamp   timestamp_gallery    next_shape  \\\n",
-       "0        1023     16.038                              1023   \n",
-       "1        1023     17.168  29.650000000000002        2 1022   \n",
-       "2      2 1022     76.165                        4 1020 512   \n",
-       "3  4 1020 512     79.600                        4 1020 256   \n",
-       "4  4 1020 256     81.315                      520 1016 512   \n",
+       "        shape  timestamp  timestamp_gallery    next_shape  \\\n",
+       "0        1023     16.038                NaN          1023   \n",
+       "1        1023     17.168              29.65        2 1022   \n",
+       "2      2 1022     76.165                NaN    4 1020 512   \n",
+       "3  4 1020 512     79.600                NaN    4 1020 256   \n",
+       "4  4 1020 256     81.315                NaN  520 1016 512   \n",
        "\n",
        "             game_file                                       shape_matrix  \\\n",
        "0  20120513_091629.txt                   [[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]   \n",
@@ -132,7 +132,7 @@
        "4  0000000100\\n1111111100\\n0100000000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,6 +141,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('data/all-games.tsv', sep='\\t')\n",
+    "df['timestamp_gallery'] = pd.to_numeric(df['timestamp_gallery'], errors='coerce')\n",
     "df.head()\n"
    ]
   },
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -451,22 +452,35 @@
       "True\n",
       "True\n",
       "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "# Test the function on the first 10 rows of the dataframe\n",
+    "# Test the function on the first 20 rows of the dataframe\n",
     "# Since this data is from humans playing the game, we expect all moves to be valid.\n",
     "\n",
+    "\n",
     "for idx, row in df.iterrows():\n",
-    "    if idx > 10:\n",
+    "\n",
+    "    if idx > 20:\n",
     "        break\n",
     "    shape = decode_shape_binaries_str(row['shape'])\n",
     "    next_shape = decode_shape_binaries_str(row['next_shape'])\n",
     "    print(is_valid_move(shape, next_shape))\n",
     "\n",
-    "# TODO: Address issue with left-justification. Rows 2 and 4 are valid moves, but the function returns False."
+    "# TODO: Address issue with left-justification. Rows 2 and 4 are valid moves, but the function returns False.\n",
+    "# The other False's occur for rows before a gallery save, which is expected because the move validation function is not designed to handle cases where shape = next_shape"
    ]
   },
   {
