update interaction loop: save responses to dictionary

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -604,7 +604,9 @@
     "        retry_count += 1\n",
     "        print(f\"Invalid move, retrying... {retry_count} / {THRESHOLD_TOTAL_RETRIES}\")\n",
     "    \n",
-    "    # TODO: save response dictionary to file (append as you go)\n"
+    "    # TODO: save response dictionary to file (append as you go)\n",
+    "    with open('data/responses.json', 'a') as f:\n",
+    "        f.write(json.dumps(output) + '\\n')\n"
    ]
   }
  ],
