added encode shape function

--- a/data-combined.ipynb
+++ b/data-combined.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,65 @@
     "        shape.append(row_of_bits)\n",
     "\n",
     "    return shape\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "640 1020\n"
+     ]
+    }
+   ],
+   "source": [
+    "def encode_shape_binaries(shape, bits=10):\n",
+    "    \"\"\"\n",
+    "    Encodes a 2D list (shape) of 0/1 bits into a single string of\n",
+    "    space-separated decimal codes. Each row in the shape becomes one code.\n",
+    "\n",
+    "    :param shape: A list of lists, where each sub-list is a row of bits (0's and 1's).\n",
+    "    :param bits: The fixed width of the binary representation (default=10).\n",
+    "    :return: A single string with space-separated decimal values\n",
+    "             (e.g., \"1016 64 64 64\").\n",
+    "    \"\"\"\n",
+    "    codes = []\n",
+    "    for row in shape:\n",
+    "        # Convert the list of bits into a binary string\n",
+    "        binary_str = ''.join([str(bit) for bit in row])\n",
+    "\n",
+    "        # Convert the binary string into an integer\n",
+    "        number = int(binary_str, 2)\n",
+    "\n",
+    "        codes.append(str(number))\n",
+    "\n",
+    "    return ' '.join(codes)\n",
+    "\n",
+    "shape = [[1, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "         [1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]\n",
+    "print(encode_shape_binaries(shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 1, 0, 0, 0, 0, 0, 0, 0], [1, 1, 1, 1, 1, 1, 1, 1, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decode_shape_binaries_str(\"640 1020\"))"
    ]
   },
   {
@@ -424,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-voids-aD7q7cFt-py3.12",
+   "display_name": "default_env",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
