--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -132,13 +132,14 @@
        "4  0000000100\\n1111111100\\n0100000000  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import networkx as nx\n",
     "\n",
     "df = pd.read_csv('data/all-games.tsv', sep='\\t')\n",
     "df['timestamp_gallery'] = pd.to_numeric(df['timestamp_gallery'], errors='coerce')\n",
@@ -612,7 +613,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default_env",
+   "display_name": "benchmarking-creativity-nbm55LEq-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -626,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
