tested GPT o3 top-left justified moves

--- a/data-combined.ipynb
+++ b/data-combined.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +100,31 @@
    ],
    "source": [
     "print(decode_shape_binaries_str(\"640 1020\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 0, 0, 0, 0, 0, 0, 0, 0], [0, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n",
+      "[[0, 0, 1, 0, 0, 0, 0, 0, 0, 0], [0, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n",
+      "[[0, 0, 1, 0, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, 1, 1, 1, 1, 1, 1], [0, 0, 1, 0, 0, 0, 0, 0, 0, 0]]\n",
+      "[[0, 0, 1, 0, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, 1, 1, 1, 1, 1, 1], [0, 0, 0, 1, 0, 0, 0, 0, 0, 0]]\n",
+      "[[0, 0, 0, 1, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, 1, 1, 1, 1, 1, 1], [0, 0, 0, 1, 0, 0, 0, 0, 0, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decode_shape_binaries_str(\"256 511\"))\n",
+    "print(decode_shape_binaries_str(\"128 511\"))\n",
+    "print(decode_shape_binaries_str(\"128 255 128\"))\n",
+    "print(decode_shape_binaries_str(\"128 255 64\"))\n",
+    "print(decode_shape_binaries_str(\"64 255 64\"))"
    ]
   },
   {
