--- a/shapes.ipynb
+++ b/shapes.ipynb
@@ -965,7 +965,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default_env",
+   "display_name": "benchmarking-creativity-nbm55LEq-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -979,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
