--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -495,6 +495,23 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import datetime\n",
+    "\n",
+    "# Set your OpenAI API key\n",
+    "import os\n",
+    "import openai\n",
+    "\n",
+    "api_key = os.environ.get(\"OPENAI_KEY\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -514,14 +531,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "import datetime\n",
     "\n",
-    "\n",
-    "\n",
-    "# Set your OpenAI API key\n",
-    "# import openai\n",
-    "# openai.api_key = 'XXXXXX'\n",
     "\n",
     "# Define a function to get a response from the OpenAI API\n",
     "def get_openai_response_fake(user_prompt, prompt):\n",
