--- a/api_sample_code.ipynb
+++ b/api_sample_code.ipynb
@@ -118,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "benchmarking-creativity-nbm55LEq-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
