--- a/first-api-call.ipynb
+++ b/first-api-call.ipynb
@@ -1,5 +1,66 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "import json as js\n",
+    "import os\n",
+    "\n",
+    "api_key = os.environ.get('OPENAI_KEY')\n",
+    "print(api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred: The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def get_openai_response(user_prompt, prompt):\n",
+    "    try:\n",
+    "        # Call the OpenAI API using the new interface\n",
+    "        response = openai.chat.completions.create(\n",
+    "            model=\"gpt-4o-mini\",  # Use the appropriate model\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": user_prompt},\n",
+    "                {\"role\": \"user\", \"content\": prompt}\n",
+    "            ],\n",
+    "            max_tokens=150  # Adjust the number of tokens as needed\n",
+    "        )\n",
+    "        # Extract the text from the response\n",
+    "        return response\n",
+    "    except Exception as e:\n",
+    "        return f\"An error occurred: {e}\"\n",
+    "user_prompt = \"You are my creative partner and we are trying to develop creative uses for everyday objects. I will provide the object and you will provide the creative use.\"\n",
+    "prompt = \"The object is a paperclip.\"\n",
+    "response = get_openai_response(user_prompt, prompt)\n",
+    "\n",
+    "print(response)"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "benchmarking-creativity-nbm55LEq-py3.12",
