--- a/first-api-call.ipynb
+++ b/first-api-call.ipynb
@@ -59,18 +59,11 @@
     "\n",
     "print(response)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "benchmarking-creativity-nbm55LEq-py3.12",
    "language": "python",
    "name": "python3"
   },
