move validation function to tools file

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +141,61 @@
     "    # TODO: save response dictionary to file (append as you go)\n",
     "    with open('data/responses.json', 'a') as f:\n",
     "        f.write(json.dumps(output) + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import datetime\n",
+    "import os\n",
+    "import openai\n",
+    "\n",
+    "# Set your OpenAI API key\n",
+    "api_key = os.getenv('OPENAI_KEY')\n",
+    "openai.api_key = api_key\n",
+    "\n",
+    "# Define a function to get a response from the OpenAI API\n",
+    "def get_openai_response(user_prompt, prompt):\n",
+    "    try:\n",
+    "        # Remove empty values from prompt (e.g., initial prompt)\n",
+    "        prompt = {k: v for k, v in prompt.items() if v}\n",
+    "        input_data = {\n",
+    "            'user_prompt': user_prompt,    # Full game instructions\n",
+    "            'prompt': json.dumps(prompt),  # Current move instructions (dict dumped to string)\n",
+    "        }\n",
+    "\n",
+    "        # Make the API call\n",
+    "        response = openai.Completion.create(\n",
+    "            model=\"gpt-o3-mini\",  # Specify the engine you want to use\n",
+    "            prompt=input_data['prompt'],\n",
+    "            max_tokens=100  # Adjust the number of tokens as needed\n",
+    "        )\n",
+    "\n",
+    "        # Process the API response\n",
+    "        output = input_data.copy()\n",
+    "        output['current_shape'] = prompt.get('current_shape')\n",
+    "        output['last_shape'] = prompt.get('last_shape')\n",
+    "        output['response'] = response.choices[0].text.strip()\n",
+    "        output['timestamp'] = datetime.datetime.now().isoformat()\n",
+    "        output['valid_move'] = is_valid_move(output['response'])  # Check if the move is valid\n",
+    "        return output\n",
+    "    except Exception as e:\n",
+    "        return f\"An error occurred: {e}\"\n",
+    "\n",
+    "# Example usage\n",
+    "user_prompt = \"instructions_v4.txt\"\n",
+    "prompt = {\n",
+    "    \"current_shape\": \"shape1\",\n",
+    "    \"last_shape\": \"shape0\",\n",
+    "    \"move\": \"move1\"\n",
+    "}\n",
+    "\n",
+    "response = get_openai_response(user_prompt, prompt)\n",
+    "print(response)"
    ]
   }
  ],
