--- a/move_validation.ipynb
+++ b/move_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,81 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1023', '1023']\n",
+      "['1023', '2 1022']\n",
+      "['2 1022', '4 1020 512']\n",
+      "['4 1020 512', '4 1020 256']\n",
+      "['4 1020 256', '520 1016 512']\n",
+      "['520 1016 512', '528 1016 512']\n",
+      "['528 1016 512', '544 1016 512']\n",
+      "['544 1016 512', '576 1016 512']\n",
+      "['576 1016 512', '576 1008 528']\n",
+      "['576 1008 528', '576 1008 544']\n",
+      "['576 1008 544', '576 1008 288']\n",
+      "1111111111\n",
+      "----------------------\n",
+      "1111111111\n",
+      "=======================\n",
+      "1111111111\n",
+      "----------------------\n",
+      "0000000010\n",
+      "1111111110\n",
+      "=======================\n",
+      "0000000010\n",
+      "1111111110\n",
+      "----------------------\n",
+      "0000000100\n",
+      "1111111100\n",
+      "1000000000\n",
+      "=======================\n",
+      "0000000100\n",
+      "1111111100\n",
+      "1000000000\n",
+      "----------------------\n",
+      "0000000100\n",
+      "1111111100\n",
+      "0100000000\n",
+      "=======================\n",
+      "0000000100\n",
+      "1111111100\n",
+      "0100000000\n",
+      "----------------------\n",
+      "1000001000\n",
+      "1111111000\n",
+      "1000000000\n",
+      "=======================\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -106,7 +180,15 @@
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
     "print(is_contiguous(shape))\n",
-    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define a function to check that there is exactly one change between the previous shape and the new shape.\n",
     "\n",
     "def is_one_change(shape, next_shape):\n",
@@ -155,7 +237,23 @@
     "    [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
-    "print(is_one_change(shape, next_shape)) \n",
+    "print(is_one_change(shape, next_shape)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
     "### Integration of the above functions to check if a move is valid\n",
     "\n",
     "\n",
@@ -176,7 +274,43 @@
     "    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
     "]\n",
     "\n",
-    "print(is_valid_move(shape, next_shape)) \n",
+    "print(is_valid_move(shape, next_shape)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
     "# Test the function on the first 20 rows of the dataframe\n",
     "# Since this data is from humans playing the game, we expect all moves to be valid.\n",
     "\n",
