adjusted API function

--- a/api-test.ipynb
+++ b/api-test.ipynb
@@ -145,18 +145,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import datetime\n",
     "import os\n",
     "import openai\n",
     "\n",
+    "from functions.tools import is_valid_move\n",
+    "\n",
     "# Set your OpenAI API key\n",
-    "api_key = os.getenv('OPENAI_KEY')\n",
-    "openai.api_key = api_key\n",
+    "api_key = os.environ.get('OPENAI_KEY')\n",
+    "print(api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An error occurred: The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "\n",
     "# Define a function to get a response from the OpenAI API\n",
     "def get_openai_response(user_prompt, prompt):\n",
@@ -169,7 +196,7 @@
     "        }\n",
     "\n",
     "        # Make the API call\n",
-    "        response = openai.Completion.create(\n",
+    "        response = openai.chat.completions.create(\n",
     "            model=\"gpt-o3-mini\",  # Specify the engine you want to use\n",
     "            prompt=input_data['prompt'],\n",
     "            max_tokens=100  # Adjust the number of tokens as needed\n",
