--- a/move_validation.ipynb
+++ b/move_validation.ipynb
@@ -185,9 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a function to check that there is exactly one change between the previous shape and the new shape.\n",
     "\n",
